# markov-chains-bot

./: Cargo.toml  Cross.toml  README.md  TOS.md
.github/workflows/: build.yml  build_aarch64.yaml  build_arm.yml  release.yml
models/: doomkitty.model  shycamille.model
src/: db.rs  global.rs  main.rs  utils.rs
src/commands/: dataset.rs  messages.rs  misc.rs  mod.rs  model.rs  params.rs  query.rs  tokens.rs
src/model/: mod.rs  params.rs
