[package]
name = "markov-chains-bot"
version = "1.3.1"
description = "Markov chains bot"
authors = ["Dylan Donnell <dylan.donnell@student.griffith.ie>"]
repository = "https://github.com/dy-tea/markov-chains-bot"
license = "MIT"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies.poise]
version = "0.6.1"

[dependencies.markov-chains]
version = "1.4.4"
git = "https://github.com/krypt0nn/markov-chains"

[dependencies.tokio]
version = "^1.4"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.postcard]
version = "1.0"
features = ["alloc"]

[dependencies]
reqwest = "0.12"
chrono = "0.4"
