[package]
name = "markov-chains-bot"
version = "1.7.2"
description = "Markov chains discord bot"
authors = ["Dylan Donnell <dylan.donnell@student.griffith.ie>"]
repository = "https://github.com/dy-tea/markov-chains-bot"
license = "GPL-3.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies.poise]
version = "0.6.1"

[dependencies.markov-chains]
version = "1.4.4"
git = "https://github.com/krypt0nn/markov-chains"

[dependencies.tokio]
version = "^1.4"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.postcard]
version = "1.0"
features = ["alloc"]

[dependencies.reqwest]
version = "0.12"
features = ["native-tls-vendored"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies]
chrono = "0.4"
bytes = "1.0"
