[package]
name = "markov-chains-bot"
version = "1.8.1"
description = "Markov chains discord bot"
authors = ["Dylan Donnell <dylan.donnell@student.griffith.ie>"]
repository = "https://github.com/dy-tea/markov-chains-bot"
license = "GPL-3.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies.markov-chains]
version = "1.4.4"
git = "https://github.com/krypt0nn/markov-chains"

[dependencies.poise]
version = "0.6.1"
features = ["cache"]

[dependencies.tokio]
version = "^1.4"
features = ["full"]

[dependencies.postcard]
version = "1.0"
features = ["alloc"]

[dependencies.reqwest]
version = "0.12"
features = ["native-tls-vendored"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.rusqlite]
version = "0.32.0"
features = ["bundled"]

[dependencies]
chrono = "0.4"
bytes = "1.0"
sysinfo = "0.32.1"
xxh3 = "0.1.1"
